update my resume

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <li>赵金超/男/1995</li>
 <li>专科/计算机科学与技术</li>
 <li>工作年限：3.5 年</li>
-<li>电话：151-0110-9905</li>
+<li>电话：151 0110 9905</li>
 <li>邮箱：jinchao0220@gmail.com</li>
-<li>期望职位：软件开发工程师</li>
+<li>期望职位：PHP 开发工程师</li>
 <li>期望薪资: 20K ~ 25K</li>
 <li>期望城市：北京</li>
 <li>GitHub：<a href="http://github.com/todayqq">http://github.com/todayqq</a></li>
@@ -14,7 +14,7 @@
 <h2 id="技能清单" data-source-line="14"><a class="markdownIt-Anchor" href="#技能清单"></a>技能清单</h2>
 <ul data-source-line="16">
 <li>Web开发：PHP/Html5/JavaScript/NodeJS</li>
-<li>前端：Bootstrap/AngularJS/Vue/ExtJS</li>
+<li>前端：Bootstrap/jQuery/Vue/ExtJS</li>
 <li>Web框架：Laravel/ThinkPHP/Yii/CodeIgniter</li>
 <li>数据库相关：MySQL/PDO/SQLite</li>
 <li>版本管理和自动化部署工具：Svn/Git/Composer</li>
@@ -27,7 +27,7 @@
 <li>3.5 年软件开发经验，积累了较多的业务和开发经验，能独立完成一个 Web 应用的开发</li>
 <li>有良好的学习能力、沟通能力、解决问题能力，拥有较强的工作责任感</li>
 <li>拥有 Geek 精神，热爱开源，在 GitHub 上有多个开源项目</li>
-<li>英语良好，熟练阅读英文文档，有多篇英文技术翻译文章</li>
+<li>英语良好，无障碍阅读英文文档，有多篇英文技术翻译文章</li>
 <li>熟练写作，无压力编写技术文档、项目文档</li>
 </ul>
 <h2 id="工作经历" data-source-line="33"><a class="markdownIt-Anchor" href="#工作经历"></a>工作经历</h2>
@@ -37,11 +37,11 @@
 <li>参与热门技术的调研，并将成熟的技术/方案引入带项目中</li>
 <li>参与完善现有项目的框架结构以及迭代优化</li>
 </ul>
-<h4 id="北京优帆远扬科技有限公司-20174-~-20181技术负责人" data-source-line="41"><a class="markdownIt-Anchor" href="#北京优帆远扬科技有限公司-20174-~-20181技术负责人"></a>北京优帆远扬科技有限公司 （2017.4 ~ 2018.1）技术负责人</h4>
+<h4 id="北京优帆远扬科技有限公司-20174-~-20181项目负责人" data-source-line="41"><a class="markdownIt-Anchor" href="#北京优帆远扬科技有限公司-20174-~-20181项目负责人"></a>北京优帆远扬科技有限公司 （2017.4 ~ 2018.1）项目负责人</h4>
 <ul data-source-line="43">
-<li>负责项目核心模块的开发工作，指导并管理开发人员的开发</li>
-<li>负责项目需求分析、总体设计，以及其中的风险、问题并采取措施避免</li>
-<li>针对项目运行时发生的问题定位，并且实施有效措施解决</li>
+<li>负责对项目整体需求分析、重难点技术的技术调研</li>
+<li>负责项目的开发进度规划、定制 UserStory，指导并管理研发人员的开发</li>
+<li>负责项目重难点模块的开发工作，项目部署、后期维护</li>
 </ul>
 <h2 id="项目经验" data-source-line="47"><a class="markdownIt-Anchor" href="#项目经验"></a>项目经验</h2>
 <h4 id="tcl-智能云拼接屏系统" data-source-line="49"><a class="markdownIt-Anchor" href="#tcl-智能云拼接屏系统"></a>TCL 智能云拼接屏系统</h4>
@@ -53,7 +53,7 @@
 </li>
 <li>项目职责
 <ul>
-<li>担任软件端架构师职责，负责编写项目核心代码。</li>
+<li>担任软件端负责人，负责编写前端和通讯端所有代码。</li>
 </ul>
 </li>
 <li>项目收获
